@@ -1,5 +1,7 @@
 shady-KISS-skin History
 -------------------------------------------
+2016-03-09:
+- Added timerconflicts in displaymenudefault 
 
 2016-03-07:
 - Removed scalingtv* in all views but main- and setupmenu
